--- a/contact-tracing-service/package.json
+++ b/contact-tracing-service/package.json
@@ -1,16 +1,19 @@
 {
   "name": "contact-tracing-service",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "the rest api for the contact tracing stystem",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "Sebastian Kargl",
+  "license": "ISC",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "express": "^4.17.2",
+    "rethinkdb": "^2.4.2",
+    "typescript": "^4.5.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
