--- a/contact-tracing-service/package.json
+++ b/contact-tracing-service/package.json
@@ -10,6 +10,7 @@
   "author": "Sebastian Kargl",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.2",
     "rethinkdb": "^2.4.2",
     "typescript": "^4.5.4"
