--- a/contact-tracing-express/package.json
+++ b/contact-tracing-express/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "Sebastan Kargl",
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.15",
     "rethinkdb": "^2.4.2"
   }
 }
