--- a/contact-tracing-express/package.json
+++ b/contact-tracing-express/package.json
@@ -14,6 +14,7 @@
     "async": "^3.2.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
